results/SVCOMP/specgen/log-athrow1-2024_02_24_10_48_47.txt
class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        return true;
        ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        //@ unreachable
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        //@ unreachable
            ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        //@ unreachable
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        //@ unreachable
            ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        //@ unreachable
        return false; // This statement is unreachable, but added to satisfy JML syntax
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        //@ unreachable
            ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        //@ unreachable
        return false; // This statement is unreachable, but added to satisfy JML syntax
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        //@ unreachable
            ^
1 error

